# CppCmakeProjectTemplate

./: .clang-tidy  .clangd  .cmake-format  .cppcheck-suppressions.txt  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .session.json  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.bak  Dockerfile.alpine  GEMINI.md  LICENSE  MANIFEST.in  MASTER_GENERATOR_PROMPT.md  README.md  VERSION  conanfile.py  cpp-cmake-scaffolder-0.1.0.vsix  package-lock.json  prompt_deneme.md  pyproject.toml  requirements-dev.txt  tidy-fixes.patch  tool.toml  vcpkg.json  vcpkg.lock.json  İstekler-Eksikler-Sorunlar.md
.cursor/rules/: main.mdc
.devcontainer/: devcontainer.json
.github/: MASTER_PROMPT.md  copilot-instructions.md  prompt.md  template.yml
.github/actions/common-ci/: action.yml
.github/agents/: cppcmake.agent.md
.github/workflows/: afl_long_run.yml  afl_long_run_manager.yml  afl_long_run_reusable.yml  ci.yml  clang_tidy_fix.yml  cmake_format.yml  create_envs.yml  fuzz-afl.yml  fuzz.yml  fuzz_afl.yml  fuzz_afl_manual.yml  gitleaks.yml  musl_nightly.yml  perf_regression.yml  release.yml  reusable-ci-setup.yml  reusable-ci.yml  security_scan.yml  vsix-package.yml
apps/: CMakeLists.txt
apps/demo_app/: CMakeLists.txt
apps/demo_app/src/: main.cpp
apps/extreme_app/: CMakeLists.txt
apps/extreme_app/src/: main.cpp
apps/gui_app/: CMakeLists.txt  README.md
apps/gui_app/src/: main.cpp
apps/main_app/: CMakeLists.txt
apps/main_app/src/: main.cpp
build-extreme/: CPackConfig.cmake  CPackSourceConfig.cmake
build-extreme/apps/extreme_app/: extreme_app
cmake/: Allocators.cmake  Benchmark.cmake  BuildCache.cmake  BuildInfo.cmake  BuildInfo.h.in  BuildInfoHelper.h  CUDA.cmake  CodeCoverage.cmake  CxxModules.cmake  CxxStandard.cmake  EmbeddedUtils.cmake  FeatureFlags.cmake  FeatureFlags.h.in  Fuzzing.cmake  HIP.cmake  Hardening.cmake  IWYU.cmake  LTO.cmake  LibraryConfig.cmake.in  Metal.cmake  OpenMP.cmake  PGO.cmake  PoolAllocator.h  ProjectConfigs.cmake  ProjectExport.cmake  ProjectOptions.cmake  Qt.cmake  Reproducibility.cmake  SYCL.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  iwyu_mappings.imp
cmake/toolchains/: aarch64-linux-gnu.cmake  aarch64-linux-musl-zig.cmake  aarch64-linux-musl.cmake  arm-cortex-m0.cmake  arm-cortex-m7.cmake  arm-none-eabi.cmake  armv7-linux-gnueabihf.cmake  linux-x86.cmake  mipsel-linux-gnu.cmake  powerpc64le-linux-gnu.cmake  riscv64-linux-gnu.cmake  wasm32-emscripten.cmake  x86_64-linux-musl-zig.cmake  x86_64-linux-musl.cmake  x86_64-w64-mingw32.cmake
docker/: Dockerfile.alpine  Dockerfile.zig-musl
docs/: BUILDING.md  BUILD_INFO.md  BUILD_INFO_PLAN.md  BUILD_SETTINGS.md  CAPABILITIES.md  CI.md  DEPENDENCIES.md  EMBEDDED.md  IDEAS.md  LIBRARY_MANAGEMENT.md  MULTI_REPO.md  PERFORMANCE.md  PLANS.md  PLUGINS.md  PROJECT_ORCHESTRATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  ROADMAP.md  STARTING_PROJECT.md  TESTING.md  TODO.md  USAGE.md  api-reference.md  contributing.md  getting-started.md  index.md
extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
extension/src/: extension.js
libs/: CMakeLists.txt
libs/dummy_lib/: CMakeLists.txt  LICENSE  README.md
libs/dummy_lib/benchmarks/: bench_dummy_lib.cpp  bench_greet.cpp
libs/dummy_lib/docs/: README.md
libs/dummy_lib/include/dummy_lib/: greet.h
libs/dummy_lib/src/: dummy_lib.cpp  greet.cpp
libs/fuzzable/: CMakeLists.txt  README.md
libs/fuzzable/docs/: README.md
libs/fuzzable/include/fuzzable/: fuzzable.h
libs/fuzzable/src/: fuzzable.cpp
libs/secure_ops/: CMakeLists.txt  README.md
libs/secure_ops/docs/: README.md
libs/secure_ops/include/secure_ops/: secure_ops.h
libs/secure_ops/src/: secure_ops.cpp
scripts/: __init__.py  _old_build.py  _old_toollib.py  add_new_lib.py  build.py  build.sh  build_extension.py  clean.py  clean.sh  common.py  init_project.py  install_deps.py  lib_manager_core.py  libtool.py  publish_vsix.py  release.py  remove_lib.py  run_build_check.py  run_build_check.sh  setup_hooks.py  setup_python_env.py  sync_to_extension.py  tool.py  toollib.py  toolsolution.py  tui.py  verify_extra.py  verify_full.py
scripts/_hist_4ca9af5/: tool.py
scripts/_hist_4ca9af5/plugins/: hooks.py  init.py  setup.py
scripts/ci/: afl_collect_findings.py  afl_corpus_manager.py  ci_security_policy.py  tidy_pr_bot.py
scripts/core/: init_impl.py  release_impl.py
scripts/core/commands/: adopt.py  analyze.py  build.py  completion.py  deps.py  diagnostics.py  doc.py  format.py  generate.py  lib.py  license.py  migrate.py  new.py  nix.py  perf.py  plugins.py  presets.py  release.py  sbom.py  security.py  session.py  sol.py  templates.py  validate.py
scripts/core/generator/: agents.py  (+14 more)
scripts/extension/: .vscodeignore  package-lock.json  package.json  rename_new_lib.py
scripts/extension/templates/apps/main_app/: CMakeLists.txt  README.md
scripts/extension/templates/apps/main_app/src/: main.cpp
scripts/fuzz/: corpus_manager.py  findings_collector.py  triage.py
scripts/plugins/: hello.py  hooks.py  init.py  publish.py  rename.py  setup.py  verify.py
scripts/stress/: harness.py  run_cli_arg_tests.py
scripts/tests/: conftest.py  test_build_watch.py  test_deps_update.py  test_diagnostics.py  test_foundation.py  test_migrate.py  test_nix.py  test_sbom.py  test_setup_plugin.py  test_templates.py
scripts/tui/: __init__.py  helpers.py  screens.py  ui.py  widgets.py
tests/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  dummy_fuzzer.cpp  fuzz_fuzzable.cpp  fuzz_secure_ops.cpp
tests/fuzz/corpus/fuzz_fuzzable/: seed1
tests/fuzz/corpus/secure_ops/: seed1  seed2
tests/unit/: CMakeLists.txt
tests/unit/demo_lib/: demo_lib_test.cpp
tests/unit/dummy_lib/: CMakeLists.txt  dummy_lib_test.cpp  greet_test.cpp
tests/unit/fuzzable/: CMakeLists.txt  test_fuzzable.cpp
tests/unit/secure_ops/: CMakeLists.txt  secure_ops_test.cpp
tests/unit/test_fix/: CMakeLists.txt  test_fix_test.cpp
triplets/: aarch64-linux-musl-zig.cmake  aarch64-linux-musl.cmake  x86_64-linux-musl-zig.cmake  x86_64-linux-musl.cmake
(+106 files in other folders)
