[tool.ruff]
line-length = 88
target-version = "py311"
# Ignore imports-not-at-top pattern used by scripts that modify sys.path at runtime
ignore = ["E402"]

# Exclude common build / virtualenv / cache directories
exclude = [
  "build",
  "build/**",
  ".venv",
  ".venv/**",
  "build_logs",
  "build_logs/**",
  "extension/templates",
  "extension/*.vsix",
  "__pycache__",
  "**/__pycache__",
]

[tool.ruff.per-file-ignores]
# Allow some TUI files or generated code to keep imports flexible
"scripts/tui/*" = ["E402"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cppcmake-tool"
version = "1.0.6"
description = "CLI for CppCmakeProjectTemplate"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "develooper1994" }
]
dependencies = [
  "Jinja2>=3.1",
  "rich>=13.0",
]

[project.scripts]
tool = "scripts.tool:main"

[tool.pytest.ini_options]
testpaths = [
    "scripts/tests",
    "scripts/core/commands/tests",
    "scripts/core/libpkg/tests",
    "scripts/core/utils/tests",
]
norecursedirs = ["extension/templates", "build", ".venv", "__pycache__", "tui"]

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.setuptools.package-dir]
"" = "scripts"
