[tool.ruff]
line-length = 88
target-version = "py311"
# Ignore imports-not-at-top pattern used by scripts that modify sys.path at runtime
ignore = ["E402"]

# Exclude common build / virtualenv / cache directories
exclude = [
  "build",
  "build/**",
  ".venv",
  ".venv/**",
  "build_logs",
  "build_logs/**",
  "extension/*.vsix",
  "__pycache__",
  "**/__pycache__",
]

[tool.ruff.per-file-ignores]
# Allow some TUI files or generated code to keep imports flexible
"scripts/tui/*" = ["E402"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cppcmake-tool"
version = "1.2.0"
description = "Professional C++ CMake project scaffolding and automation CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "develooper1994" }
]
keywords = ["cpp", "cmake", "scaffolding", "project-template", "build-automation", "code-generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "Jinja2>=3.1",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "build>=1.0",
    "twine>=4.0",
]
tui = [
    "textual>=0.40",
]

[project.urls]
Homepage = "https://github.com/develooper1994/CppCmakeProjectTemplate"
Repository = "https://github.com/develooper1994/CppCmakeProjectTemplate"
Documentation = "https://github.com/develooper1994/CppCmakeProjectTemplate/tree/main/docs"
Issues = "https://github.com/develooper1994/CppCmakeProjectTemplate/issues"

[project.scripts]
cppcmake-tool = "tool:main"

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = [
    "scripts/tests",
    "scripts/core/commands/tests",
    "scripts/core/libpkg/tests",
    "scripts/core/utils/tests",
    "scripts/core/generator/tests",
]
norecursedirs = ["extension/templates", "build", ".venv", "__pycache__", "tui"]
# Disable system-level plugins that break headless / CI environments
addopts = "-p no:qt -p no:xvfb -p no:recording -p no:vcr"

[tool.setuptools]
py-modules = ["tool", "tui"]

[tool.setuptools.packages.find]
where = ["scripts"]
exclude = ["tests", "tests.*", "*.tests", "*.tests.*"]

[tool.setuptools.package-dir]
"" = "scripts"

[tool.setuptools.package-data]
"core.libpkg" = ["templates/*.jinja2"]
